--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,42 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cvRoot"
-    android:layout_marginLeft="@dimen/grid_margin"
-    android:layout_marginRight="@dimen/grid_margin"
-    android:layout_marginTop="@dimen/cell_margin"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    card_view:cardCornerRadius="@dimen/card_corner_radius"
-    card_view:cardElevation="@dimen/card_elevation">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                    xmlns:app="http://schemas.android.com/tools"
+                                    android:id="@+id/cvRoot"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/grid_margin"
+                                    android:layout_marginRight="@dimen/grid_margin"
+                                    android:layout_marginTop="@dimen/cell_margin"
+                                    android:clickable="true"
+                                    card_view:cardCornerRadius="@dimen/card_corner_radius"
+                                    card_view:cardElevation="@dimen/card_elevation">
 
     <LinearLayout
+        android:id="@+id/llEventContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
-        android:id="@+id/llEventContainer"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="6dp">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/ivImage"/>
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvGroupName"/>
+        <TextView
+            android:id="@+id/tvGroupName"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/RobotoCondensed" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvEventName"/>
+        <TextView
+            android:id="@+id/tvDateTime"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/RobotoMedium"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvDateTime"/>
+        <TextView
+            android:id="@+id/tvEventName"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/RobotoCondensed"/>
+
+
 
     </LinearLayout>
 
