--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -123,7 +123,7 @@
     </style>
 
     <style name="MapInfoWindow.Body" parent="conv_card_sections_body">
-        <item name="android:paddingTop">20dp</item>
+        <item name="android:layout_marginTop">20dp</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
         <item name="android:paddingBottom">10dp</item>
