--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,8 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.UserActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:layout_width="wrap_content"
@@ -77,6 +76,17 @@
         android:text="@string/forget_password"
         android:textAlignment="center"/>
 
+    <TextView
+        android:id="@+id/tvNoAccount"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:text="@string/no_account"
+        android:textAlignment="center"
+        android:layout_below="@+id/tvForgetPasswd"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+
     <Button
         android:id="@+id/btnJoin"
         android:layout_width="match_parent"
@@ -84,19 +94,10 @@
         android:src="#f6e017"
         android:text="@string/create_new_account"
         android:textAlignment="center"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@id/tvNoAccount"
+        android:layout_marginTop="@dimen/component_vertical_margin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:id="@+id/tvNoAccount"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="@string/no_account"
-        android:textAlignment="center"
-        android:layout_above="@+id/btnJoin"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/comp_vertical_margin"/>
+
 </RelativeLayout>
