--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/ivProfileOther"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="@dimen/chat_profile_image_width"
+        android:layout_height="@dimen/chat_profile_image_height"
         android:contentDescription="@string/profile_other"
         android:src="@mipmap/ic_launcher"/>
 
