--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,24 +9,24 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
+        android:id="@+id/tvUserLoginAdvice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUserLoginAdvice"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_margin="30dp"
-        android:textSize="25sp"
         android:gravity="center"
         android:text="For a full experience, please Log in or Register"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
+        android:textSize="25sp"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvUserLoginAdvice"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin">
+        android:focusableInTouchMode="true">
 
         <EditText
             android:id="@+id/etEmail"
@@ -54,50 +53,38 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/tilPassword"
-        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
         android:text="@string/login"/>
-
-
 
     <TextView
         android:id="@+id/tvForgetPasswd"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_below="@id/btnLogin"
-        android:textColor="@color/colorAccent"
         android:layout_centerHorizontal="true"
         android:text="@string/forget_password"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"/>
 
     <TextView
         android:id="@+id/tvNoAccount"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:text="@string/no_account"
-        android:textAlignment="center"
         android:layout_below="@+id/tvForgetPasswd"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="@string/no_account"
+        android:textAlignment="center"/>
 
     <Button
         android:id="@+id/btnJoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="#f6e017"
-        android:text="@string/create_new_account"
-        android:textAlignment="center"
         android:layout_below="@id/tvNoAccount"
-        android:layout_marginTop="@dimen/component_vertical_margin"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:text="@string/create_new_account"
+        android:textAlignment="center"/>
 
 
 </RelativeLayout>
