--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="@dimen/activity_horizontal_margin"
+              android:padding="@dimen/component_vertical_margin"
               android:orientation="horizontal">
 
     <ImageView
@@ -26,8 +26,8 @@
 
     <ImageView
         android:id="@+id/ivProfileMe"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="@dimen/chat_profile_image_width"
+        android:layout_height="@dimen/chat_profile_image_height"
         android:layout_marginLeft="-64dp"
         android:layout_marginStart="-64dp"
         android:contentDescription="@string/profile_me"
