--- a/app/src/main/res/layout/fragment_stream.xml
+++ b/app/src/main/res/layout/fragment_stream.xml
@@ -1,16 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvStream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/rvStream"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"/>
+
+    <TextView
+        android:id="@+id/empty_view"
+        style="@style/RobotoLight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:padding="36dp"
+        android:text="@string/no_data_available"
+        android:textSize="26sp"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/ivToolsAndTraining"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_below="@+id/empty_view"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_training"
+        android:tint="@color/colorAccent"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+</RelativeLayout>
