--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,7 +53,6 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textAlignment">center</item>
         <item name="android:textSize">@dimen/conv_text_big</item>
         <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
 
@@ -219,6 +218,48 @@
         <item name="fontPath">fonts/Roboto-Medium.ttf</item>
     </style>
 
+<!-- Event Detail page -->
+
+    <style name="EventDetailLayout">
+        <item name="android:padding">@dimen/map_popup_margin</item>
+    </style>
+
+    <style name="EventDetail.GroupName" parent="">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/conv_text_big</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+    </style>
+
+    <style name="EventDetail.EventName" parent="">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">28sp</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
+    <style name="EventDetail.EventTime" parent="">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">22sp</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
+    <style name="EventDetail.Body" parent="conv_card_sections_body">
+        <item name="android:paddingTop">20dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+    </style>
 
 
 </resources>
