--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -7,7 +7,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/EventDetailLayout">
+        style="@style/EventDetailLayout"
+        android:background="@android:color/white">
 
         <ImageView
             android:id="@+id/ivImage"
