--- a/app/src/main/res/layout/fragment_simple_list.xml
+++ b/app/src/main/res/layout/fragment_simple_list.xml
@@ -10,6 +10,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/rvItems" />
+        android:id="@+id/rvItems"
+        android:background="@android:color/white"/>
 
 </android.support.v4.widget.SwipeRefreshLayout>
