--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -3,7 +3,7 @@
                                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                     xmlns:app="http://schemas.android.com/tools"
                                     android:id="@+id/cvRoot"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="@dimen/grid_margin"
                                     android:layout_marginRight="@dimen/grid_margin"
