--- a/app/src/main/res/layout/fragment_simple_list.xml
+++ b/app/src/main/res/layout/fragment_simple_list.xml
@@ -11,6 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rvItems"
-        android:background="@android:color/white"/>
+        android:background="@color/colorPrimaryLight"/>
 
 </android.support.v4.widget.SwipeRefreshLayout>
