--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,6 +119,7 @@
 
     <style name="MapInfoWindow.Subtitle" parent="conv_card_quote_body">
         <item name="android:textSize">@dimen/conv_text_regular</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
     <style name="MapInfoWindow.Body" parent="conv_card_sections_body">
@@ -216,6 +217,27 @@
 
     <style name="RobotoMedium">
         <item name="fontPath">fonts/Roboto-Medium.ttf</item>
+    </style>
+
+    <!-- Event List page -->
+    <style name="EventList.EventName" parent="">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/conv_text_big</item>
+        <item name="fontPath">fonts/RobotoCondensed-Regular.ttf</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="EventList.Date" parent="">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/conv_text_big</item>
+        <item name="fontPath">fonts/RobotoCondensed-Light.ttf</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
 <!-- Event Detail page -->
