events working forward but not backwards

--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -14,7 +14,9 @@
             android:id="@+id/ivImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:transitionName="event_image_transition" />
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:transitionName="@string/even_transition" />
 
         <TextView
                 android:id="@+id/tvGroupName"
