--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,5 @@
     <dimen name="fab_elevation">8dp</dimen>
     <dimen name="chat_profile_image_width">60dp</dimen>
     <dimen name="chat_profile_image_height">60dp</dimen>
+    <dimen name="tabstrip_height">48dp</dimen>
 </resources>
