--- a/app/src/main/res/layout/item_chat_user.xml
+++ b/app/src/main/res/layout/item_chat_user.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:descendantFocusability="blocksDescendants"
                 android:padding="@dimen/activity_horizontal_margin">
 
@@ -12,8 +13,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="@dimen/component_vertical_margin"
-        android:layout_marginRight="@dimen/component_vertical_margin"/>
+        android:layout_marginRight="8dp"
+        tools:src="@drawable/profile_placeholder"/>
 
     <TextView
         android:id="@+id/tvUserName"
@@ -21,27 +22,29 @@
         android:textColor="@color/colorPrimaryLight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        tools:text="Elizabeth Saft"
+        android:text=""
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/ivProfileImage"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:text=""/>
+        android:layout_toEndOf="@+id/ivProfileImage"/>
 
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/ivProfileImage"
         android:layout_toRightOf="@+id/ivProfileImage"
-        android:layout_alignBottom="@id/ivProfileImage"
+        android:layout_below="@+id/tvUserName"
+        android:layout_toLeftOf="@+id/ivUserType"
+        android:gravity="top"
+        tools:text="A parent that is trying to work with adopted children"
         android:text=""/>
 
-    <TextView
-        android:textStyle="bold"
-        android:id="@+id/tvUserType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tvUserName"
-        android:layout_alignParentEnd="true"
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/ivUserType"
+        tools:src="@drawable/service_provider"
+        android:layout_alignTop="@+id/tvUserName"
         android:layout_alignParentRight="true"
-        android:text=""/>
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
