--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -37,10 +37,10 @@
     <Button
         android:id="@+id/btSend"
         android:gravity="center"
-        android:paddingRight="10dp"
         android:textSize="18sp"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
+        style="@style/button_standard"
         android:text="@string/send"
         android:layout_height="wrap_content"/>
     <EditText
