--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -286,7 +286,7 @@
 
     <style name="button_standard">
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:background">#f57f17</item>
+        <item name="android:background">@drawable/rounded_button</item>
         <item name="android:paddingBottom">5dp</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
