--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -19,7 +19,7 @@
                         android:onClick="onSelectNearYou">
 
 
-            <com.flaviofaria.kenburnsview.KenBurnsView
+            <ImageView
                 android:id="@+id/ivMenuImageMap"
                 style="@style/home_menu_item_image"
                 android:src="@drawable/map_1"/>
@@ -41,7 +41,7 @@
                         android:onClick="onSelectLibrary">
 
 
-            <com.flaviofaria.kenburnsview.KenBurnsView
+            <ImageView
                 android:id="@+id/ivMenuImageLibrary"
                 style="@style/home_menu_item_image"
                 android:src="@drawable/library_1"/>
@@ -65,7 +65,7 @@
                         android:onClick="onSelectToolsAndTechniques">
 
 
-            <com.flaviofaria.kenburnsview.KenBurnsView
+            <ImageView
                 android:id="@+id/ivMenuImageTools"
                 style="@style/home_menu_item_image"
                 android:src="@drawable/tools_6"/>
