--- a/app/src/main/res/layout/content_stream_pager.xml
+++ b/app/src/main/res/layout/content_stream_pager.xml
@@ -9,7 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:pstsShouldExpand="true"
-        app:pstsTextAllCaps="true"/>
+        app:pstsTabBackground="@color/colorPrimary"
+        app:pstsIndicatorColor="@color/colorPrimaryDark"
+        app:pstsTabTextColor="@android:color/white"
+        app:pstsIndicatorHeight="4dp"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
