--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,69 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
+    android:id="@+id/cardItem"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rlStreamItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="60dp">
-
-    <ImageView
-        android:id="@+id/ivItemImage"
-        android:layout_width="match_parent"
-        android:layout_height="320dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/card_dummy"/>
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="12dp"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="6dp"
+    android:background="@android:color/white"
+    card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
+        android:id="@+id/rlStreamItem"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignBottom="@+id/ivItemImage"
+        android:layout_height="wrap_content">
 
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="#44000000">
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            tools:text="This is an example"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
-
-        <TextView
-            android:id="@+id/tvDescription"
+        <ImageView
+            android:id="@+id/ivItemImage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textColor="@android:color/white"
-
-            tools:text="Lorem ipsum dolor sit aemet whatever and bla bla bla and more bla bla bla that goes beyond and bla bla bla and more bla bla bla tha"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:layout_below="@+id/tvTitle"
+            android:layout_height="320dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentTop="true"
 
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/card_dummy"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_alignBottom="@+id/ivItemImage"
+
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:background="#44000000">
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                style="@style/RobotoCondensed"
+                tools:text="This is an example"/>
+
+            <TextView
+                android:id="@+id/tvDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="8dp"
+                android:layout_below="@+id/tvTitle"
+                android:ellipsize="end"
+                android:maxLines="2"
+                style="@style/RobotoLight"
+                android:textColor="@android:color/white"
+                tools:text="Lorem ipsum dolor sit aemet whatever and bla bla bla and more bla bla bla that goes beyond and bla bla bla and more bla bla bla tha"/>
+
+
+        </RelativeLayout>
 
 
     </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@drawable/toolbar_dropshadow"
-        android:layout_below="@+id/ivItemImage"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-
-</RelativeLayout>
+</android.support.v7.widget.CardView>
