--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 android:layout_height="match_parent"/>
 
             <View
+                android:id="@+id/toolbar_shadow"
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
                 android:background="@drawable/toolbar_dropshadow"/>
